--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^7.1.2",
     "highcharts-angular": "^2.4.0",
+    "highcharts-custom-events": "^2.2.2",
     "http": "0.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
