--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/highcharts": "^5.0.44",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "highcharts": "^7.1.2",
