--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "working-poc-ui": {
+    "deluxe-branded-marketing": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/working-poc-ui",
+            "outputPath": "dist/deluxe-branded-marketing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "working-poc-ui:build"
+            "browserTarget": "deluxe-branded-marketing:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "working-poc-ui:build:production"
+              "browserTarget": "deluxe-branded-marketing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "working-poc-ui:build"
+            "browserTarget": "deluxe-branded-marketing:build"
           }
         },
         "test": {
@@ -107,7 +107,7 @@
         }
       }
     },
-    "working-poc-ui-e2e": {
+    "deluxe-branded-marketing-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "working-poc-ui:serve"
+            "devServerTarget": "deluxe-branded-marketing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "working-poc-ui:serve:production"
+              "devServerTarget": "deluxe-branded-marketing:serve:production"
             }
           }
         },
@@ -136,5 +136,5 @@
       }
     }
   },
-  "defaultProject": "working-poc-ui"
+  "defaultProject": "deluxe-branded-marketing"
 }
